AC_INIT(LICENSE)
AC_PROG_CC
AC_PROG_RANLIB
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)
AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_TYPE(ssize_t, int)
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(memcpy)
AC_REPLACE_FUNCS(strerror)

# Fix LIBOBJS to look for any replacement functions in replace/.
if test x"$LIBOBJS" != x ; then
    LIBOBJS=`echo "$LIBOBJS" | sed 's/^  *//' | sed 's/  */ /g'`
    LIBOBJS=`echo "$LIBOBJS" | sed 's%^%replace/%' | sed 's% % replace/%g'`
fi

AC_CONFIG_HEADER(include/config.h)
AC_OUTPUT(Makefile)
